--- a/css/style.css
+++ b/css/style.css
@@ -441,3 +441,31 @@ body {
 .pagination-dots button.active {
     background-color: red;
 }
+.circle-arrow {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 50px;
+      height: 50px;
+      background-color: #fff;
+      color: #111;
+      border: none;
+      border-radius: 50%;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      font-size: 24px;
+      cursor: pointer;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      transition: background 0.3s ease;
+      z-index: 100;
+      
+    }
+
+    .circle-arrow:hover {
+      background-color: #eee;
+    }
+
+    .circle-arrow.visible {
+      display: flex;
+    }
