--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 :root{
   --font-BN:  "Bebas Neue", sans-serif;
   --font-Ao: "Archivo";
+  --font-ro: "Roboto", sans-serif;
 }
 
 * {
@@ -139,6 +141,8 @@ body {
     height: 150px;
     overflow: hidden;
     margin: 5px 5px;
+    color: gray;
+    gap: 20px;
 }
 .s-pg {
     flex: 2;
@@ -146,17 +150,17 @@ body {
     grid-template-rows: 50px 1fr;
     justify-content: flex-start;
     align-items: center;
-    padding-left: 10px;
+    
 }
 .font-1 {
     font-size: 26px;
 }
-.s-pg p {
-    font-family: var(--font-Ao);
+.s-pg p{
+    font-family: var(--font-ro);
     font-size: 17px;
 }
 .img-p {
-    opacity: 0.7;
+    opacity: 0.5;
 }
 .about-head {
     display: flex;
