--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ body {
     width: 55px;
     border-radius: 50px;
     overflow: hidden;
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.533);
     box-shadow:
         0 4px 8px 0 rgba(0, 0, 0, 0.4),
         0 6px 20px 0 rgba(0, 0, 0, 0.4);
@@ -109,6 +109,7 @@ body {
     border: none;
     background-color: transparent;
 }
+
 
 .About {
     display: flex;
