--- a/css/style.css
+++ b/css/style.css
@@ -277,43 +277,23 @@ body {
 
 .project {
     width: 100%;
-    height: 700px;
+    height: 300px;
     display: grid;
-    grid-template-rows: 200px 70px 1fr 40px;
+    grid-template-rows: 200px 70px;
     justify-content: center;
     top: 0;
     bottom: 0;
-    overflow: hidden;
+    
 }
 
 .projects {
-    display: flex;
+    display: grid;
+    grid-template-columns: 100px 1500px 100px;
+    justify-content: center;
+    gap: 20px;
     align-items: center;
-    overflow: hidden;
-    gap: 20px;
     position: relative;
-}
-
-.p-img {
-    height: 80;
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    gap: 20px;
-}
-
-.p-img img {
-    width: 250px;
-    height: 320px;
-    object-fit: cover;
-    object-position: center;
-    filter: saturate(0.5);
-    overflow: hidden;
-    transition: filter 0.3s ease-in-out;
-}
-
-.p-img img:hover {
-    filter: saturate(1);
+    
 }
 
 .contact {
@@ -405,19 +385,20 @@ body {
 }
 .carousel-track-container {
     overflow: hidden;
-    width: 980px; /* 3 cards of 200px + 2 gaps of 10px */
+    width: 1500px; /* 3 cards of 200px + 2 gaps of 10px */
 }
 
 .carousel-track {
     display: flex;
     gap: 15px;
+    
     flex-wrap: nowrap;
     transition: transform 0.4s ease;
 }
 
 .image-box {
-    width: 230px;
-    height: 350px;
+    width: 485px;
+    height: 500px;
     flex-shrink: 0;
     position: relative;
     overflow: hidden;
@@ -468,6 +449,7 @@ body {
     filter: opacity(.7);
     padding: 10px;
     border: none;
+    
     background-color: transparent;
     cursor: pointer;
     width: 96px;
@@ -479,6 +461,7 @@ body {
     background-image: url(../icons/icons8-arrow-96.png);
     filter: opacity(.7);
     border: none;
+    
     padding: 10px;
      background-color: transparent;
     cursor: pointer;
@@ -535,7 +518,10 @@ body {
     .circle-arrow.visible {
       display: flex;
     }
-
+.social-media-contact button{
+    background:transparent;
+    border: none;
+}
 @media screen and (max-width :1000px) {
     .about-box{
         grid-template-columns: repeat(2,1fr);
@@ -605,6 +591,9 @@ body {
 }
 .projects{
     gap:10px;
+    grid-template-columns: 10px 1fr 10px;
+    justify-content: center;
+    align-content: center;
 }
 .carousel-track-container{
     width:100%;
@@ -623,4 +612,9 @@ body {
     width:400px;
     height:450px;
 }
+.carousel-track-container {
+    overflow: hidden;
+    width: 100vw; /* 3 cards of 200px + 2 gaps of 10px */
+}
+
 }
